--- a/CPSTP3.ipynb
+++ b/CPSTP3.ipynb
@@ -28,7 +28,7 @@
        "        <iframe\n",
        "            width=\"985\"\n",
        "            height=\"1200\"\n",
-       "            src=\"trab_cps_3.pdf\"\n",
+       "            src=\"https://github.com/pedroamarocosta/CPSTP3/blob/master/trab_cps_3.pdf\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
@@ -2220,7 +2220,7 @@
     }
    ],
    "source": [
-    "IFrame(\"Resolução7.png\", width=985, height=1200)"
+    "IFrame(\"https://github.com/pedroamarocosta/CPSTP3/blob/master/Resolu%C3%A7%C3%A3oExercicio7.png\", width=985, height=1200)"
    ]
   },
   {
