--- a/CPSTP3.ipynb
+++ b/CPSTP3.ipynb
@@ -44,7 +44,7 @@
     }
    ],
    "source": [
-    "IFrame(\"trab_cps_3.pdf\", width=985, height=1200)"
+    "IFrame(\"https://github.com/pedroamarocosta/CPSTP3/blob/master/trab_cps_3.pdf\", width=985, height=1200)"
    ]
   },
   {
@@ -2204,7 +2204,7 @@
        "        <iframe\n",
        "            width=\"985\"\n",
        "            height=\"1200\"\n",
-       "            src=\"Resolução7.png\"\n",
+       "            src=\"https://github.com/pedroamarocosta/CPSTP3/blob/master/Resolu%C3%A7%C3%A3oExercicio7.png\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
